fix TMDbRateLimiter upgrade deps